DiaryLogNew Use BeginCollectionItem

--- a/DL/DL/Views/Account/Login.cshtml
+++ b/DL/DL/Views/Account/Login.cshtml
@@ -6,6 +6,13 @@
 }
 <br />
 
+<script>
+    $(function () {
+        $("#AccountId").val('1698');
+        $("#Password").val('1234');
+    });
+</script>
+
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
