--- a/DL/DL/Views/Account/Register.cshtml
+++ b/DL/DL/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
 
     $(document).ready(function () {
 
-        if ($("#UserAccount").val() != null)
+        @*if ($("#UserAccount").val() != null)
             {
         $("#UserAccount").blur(function () {
             $.ajax({
@@ -31,7 +31,7 @@
                 }
             });
         });
-        }
+        }*@
     });
 
 </script>
