--- a/DL/DL/Views/DiaryLogNew/Create.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Create.cshtml
@@ -8,19 +8,15 @@
 <script type="text/javascript">
 
     $(function () {
+
         $('#DiaryLogDate').datepicker({
             dateFormat: "yy/mm/dd"
         });
-    })
 
-    // 新增明細的Partial View, 附加到 table
-    $(function () {
-
-            $.get('/DiaryLogNew/GetDetailPartialView', function (template) {
-                $("#TextBoxesGroup").append(template);
-                event.preventDefault();
-            });
-
+        $.get('/DiaryLogNew/GetDetailPartialView', function (template) {
+            $("#TextBoxesGroup").append(template);
+            event.preventDefault();
+        });
 
         $("#addDetailBtn").click(function () {
             $.get('/DiaryLogNew/GetDetailPartialView', function (template) {
@@ -28,6 +24,7 @@
                 event.preventDefault();
             });
         });
+
     });
 </script>
 
@@ -47,22 +44,22 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" >姓名</label>
+            <label class="control-label col-md-2">姓名</label>
             <div class="col-md-2">
                 <label class="form-control">@Model.UserName</label>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" >時間</label>
+            <label class="control-label col-md-2">時間</label>
             <div class="col-md-2">
-                @Html.TextBoxFor(x => x.DiaryLogDate, "{0:yyyy/MM/dd}", new { @placeholder = "請輸入日期",@class= "form-control" })
+                @Html.TextBoxFor(x => x.DiaryLogDate, "{0:yyyy/MM/dd}", new { @placeholder = "請輸入日期", @class = "form-control" })
             </div>
         </div>
     </div>
 
     <a id="addDetailBtn" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增</a>
-        <br />
+    <br />
         <br />
         <table id='TextBoxesGroup' class="table table-striped" style="font-size:12px">
             <thead>
@@ -78,9 +75,9 @@
             </thead>
         </table>
 
-            <div class="form-group">
-                <input type="submit" class="col-md-offset-11 btn btn-primary" onclick="ExecuteSubmit();" value="送出" />
-            </div>
+        <div class="form-group">
+            <input type="submit" class="col-md-offset-11 btn btn-primary" value="送出" />
+        </div>
 }
 
 <div>
