--- a/DL/DL/Views/Account/Login.cshtml
+++ b/DL/DL/Views/Account/Login.cshtml
@@ -13,10 +13,16 @@
     });
 </script>
 
+<script type="text/javascript">
+    $(function () {
+        $("form").makeValidationInline();
+    });
+</script>
+
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new {@id="form", @class = "form-horizontal", role = "form" }))
             {
                 <h4><strong>@ViewBag.Title</strong> </h4>
                 <hr />
