--- a/DL/DL/Views/Shared/_Layout.cshtml
+++ b/DL/DL/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryinline")
+    @Styles.Render("~/Content/inlinecss")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
