--- a/DL/DL/Views/DiaryLogNew/Index.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Index.cshtml
@@ -19,9 +19,9 @@
 <br />
 <h4><strong>@ViewBag.Title</strong></h4>
 
-@using (Html.BeginForm("Index", "DiaryLog", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "diaryLogFrom", @class = "form-inline", role = "form" }))
+@using (Html.BeginForm("Index", "DiaryLogNew", FormMethod.Post, new { id = "diaryLogFrom", @class = "form-inline", role = "form" }))
 {
-
+    @Html.HiddenFor(x => x.UserId)
     <div class="form-group">
         <label class="sr-only" for="name">日期起</label>
         @Html.TextBox("dateStart", "", new { @placeholder = "請輸入日期起", @class = "form-control" })
@@ -31,13 +31,13 @@
         @Html.TextBox("dateEnd", "", new { @placeholder = "請輸入日期迄", @class = "form-control" })
     </div>
     <input type="submit" value="查詢" class="btn btn-default" />
-        <br />
-        <br />
+    <br />
+    <br />
 
-        if(ViewBag.Account != "9999")
-        {
+    if (ViewBag.Account != "9999")
+    {
         <a href="/DiaryLogNew/Create" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增</a>
-        }
+    }
 
     if (Model.DiaryLogDate != null && Model.DiaryLogDate.Count() > 0)
     {
@@ -67,8 +67,9 @@
                             @String.Format("{0:d}", item)
                         </td>
                         <td>
-                            @if(ViewBag.Account != "9999"){
-                                 <a class="btn btn-primary" href="/DiaryLogNew/Edit/?strDate=@string.Format(" {0:yyyy-MM-dd}", item)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>編輯</a>
+                            @if (ViewBag.Account != "9999")
+                            {
+                                <a class="btn btn-primary" href="/DiaryLogNew/Edit/?strDate=@string.Format(" {0:yyyy-MM-dd}", item)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>編輯</a>
                             }
                             else
                             {
@@ -85,6 +86,13 @@
         </div>
                         }
                     }
+
+@if(Session["Account"].ToString().Equals("9999"))
+{ 
+<div>
+    @Html.ActionLink("返回列表", "MasterIndex",null, new { @class = "btn btn-default" })
+</div>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
