--- a/DL/DL/Views/DiaryLogNew/MasterIndex.cshtml
+++ b/DL/DL/Views/DiaryLogNew/MasterIndex.cshtml
@@ -5,32 +5,21 @@
     ViewBag.Title = "輸入查詢條件";
 }
 
-<script type="text/javascript">
-    //$(function () {
-    //    $('#dateStart').datepicker({
-    //        dateFormat: "yy/mm/dd"
-    //    });
-    //    $('#dateEnd').datepicker({
-    //        dateFormat: "yy/mm/dd"
-    //    });
-    //})
-</script>
-
 <br />
 <h4><strong>@ViewBag.Title</strong></h4>
 
 @using (Html.BeginForm("MasterIndex", "DiaryLogNew", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "diaryLogFrom", @class = "form-inline", role = "form" }))
 {
 
-    @*<div class="form-group">
-        <label class="sr-only" for="name">日期起</label>
-        @Html.TextBox("dateStart", "", new { @placeholder = "請輸入日期起", @class = "form-control" })
+    <div class="form-group">
+        <label class="sr-only" for="name">員工編號</label>
+        @Html.TextBox("UserAccount", "", new { @placeholder = "請輸入員工編號", @class = "form-control" })
     </div>
     <div class="form-group">
-        <label class="sr-only" for="inputfile">日期迄</label>
-        @Html.TextBox("dateEnd", "", new { @placeholder = "請輸入日期迄", @class = "form-control" })
+        <label class="sr-only" for="inputfile">姓名</label>
+        @Html.TextBox("UserName", "", new { @placeholder = "請輸入姓名", @class = "form-control" })
     </div>
-    <input type="submit" value="查詢" class="btn btn-default" />*@
+    <input type="submit" value="查詢" class="btn btn-default" />
     <br />
     <br />
 
