--- a/DL/DL/Content/validationEngine.jquery.css
+++ b/DL/DL/Content/validationEngine.jquery.css
@@ -19,7 +19,7 @@
     width: 100%;
     background: #ee0101;
     color: #fff;
-    width: 150px;
+    width: auto;
     font-family: tahoma;
     font-size: 11px;
     border: 2px solid #ddd;
