--- a/DL/DL/Views/DiaryLogNew/Create.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@using DL.Web.ViewModels.DiaryLogNew
-@model DiaryLogNewEditViewModel
+@model DiaryLogNewEditVM
 
 @{
-    ViewBag.Title = "新增";
+    ViewBag.Title = "新增 工作日誌";
 }
 
 <script type="text/javascript">
@@ -25,6 +25,8 @@
             });
         });
 
+        $("form").makeValidationInline();
+
     });
 </script>
 
@@ -33,8 +35,8 @@
 @using (Html.BeginForm("Create", "DiaryLogNew", FormMethod.Post, new { @id = "createForm" }))
 {
     @Html.AntiForgeryToken()
-    <h3 class="microsoft-font">工作日誌</h3>
-
+    <h4><strong>@ViewBag.Title</strong></h4>
+    <hr />
     @Html.HiddenFor(x=>x.UserId)
     <div class="form-horizontal">
         <div class="form-group">
@@ -55,6 +57,7 @@
             <label class="control-label col-md-2">時間</label>
             <div class="col-md-2">
                 @Html.TextBoxFor(x => x.DiaryLogDate, "{0:yyyy/MM/dd}", new { @placeholder = "請輸入日期", @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.DiaryLogDate, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
@@ -75,7 +78,6 @@
                 </tr>
             </thead>
         </table>
-
         <div class="form-group">
             <input type="submit" class="col-md-offset-11 btn btn-primary" value="送出" />
         </div>
