--- a/DL/DL/Views/DiaryLogNew/Detail.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DL.Web.ViewModels.DiaryLogNew
-@model DiaryLogNewEditViewModel
+@model DiaryLogNewEditVM
 
 @{
     ViewBag.Title = "明細";
@@ -19,22 +19,29 @@
 @using (Html.BeginForm("Detail", "DiaryLogNew", FormMethod.Post, new { @id = "detailForm" }))
 {
     @Html.AntiForgeryToken()
-    <h3 class="microsoft-font">工作日誌</h3>
+
+    <h4><strong>@ViewBag.Title</strong></h4>
+    <hr />
     <div class="form-horizontal">
         <div class="form-group">
-            <label class="col-md-1" for="name">員工編號</label>
-            <label class="col-md-2 label-info" for="name">@Model.UserAccount</label>
+            <label class="control-label col-md-2">員工編號</label>
+            <div class="col-md-2">
+                <label class="form-control">@Model.UserAccount</label>
+            </div>
         </div>
 
         <div class="form-group">
-            <label class="col-md-1" for="name">姓名</label>
-            <label class="col-md-2 label-info" for="name">@Model.UserName</label>
+            <label class="control-label col-md-2">姓名</label>
+            <div class="col-md-2">
+                <label class="form-control">@Model.UserName</label>
+            </div>
         </div>
 
         <div class="form-group">
-            <label class="col-md-1" for="name">時間</label>
-            <label class="col-md-2 label-info" for="name"> @string.Format("{0:d}", Model.DiaryLogDate) </label>
-            @Html.HiddenFor(m => m.DiaryLogDate)
+            <label class="control-label col-md-2">時間</label>
+            <div class="col-md-2">
+                <label class="form-control">@String.Format("{0:d}", Model.DiaryLogDate) </label>
+            </div>
         </div>
     </div>
 
