--- a/DL/DL/Views/DiaryLogNew/Detail.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Detail.cshtml
@@ -2,7 +2,7 @@
 @model DiaryLogNewEditVM
 
 @{
-    ViewBag.Title = "明細";
+    ViewBag.Title = "工作日誌 " + Model.UserName + "的明細";
 }
 
 <script type="text/javascript">
