--- a/DL/DL/Views/DiaryLogNew/_DiaryLogEditDetailPartialView.cshtml
+++ b/DL/DL/Views/DiaryLogNew/_DiaryLogEditDetailPartialView.cshtml
@@ -1,4 +1,6 @@
-﻿@model DL.Models.DiaryLog
+﻿@using DL.Web.ViewModels.DiaryLogNew
+@model DiaryLogDetailVM
+
 <tr> 
     @using (Html.BeginCollectionItem("DiaryLogs"))
     {
