--- a/DL/DL/Views/User/Delete.cshtml
+++ b/DL/DL/Views/User/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DL.Web.ViewModels.User.UserDeleteViewModel
+﻿@model DL.Web.ViewModels.User.UserDeleteVM
 
 @{
     ViewBag.Title = "確定刪除該筆資料?";
