--- a/DL/DL/Views/DiaryLogNew/Edit.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Edit.cshtml
@@ -6,21 +6,49 @@
 }
 
 <script type="text/javascript">
+
+    // 新增明細的Partial View, 附加到 table
     $(function () {
         $('#diaryLogDate').datepicker({
             dateFormat: "yy/mm/dd"
         });
-    })
 
-
-    // 新增明細的Partial View, 附加到 table
-    $(function () {
         $("#addDetailBtn").click(function () {
             $.get('/DiaryLogNew/GetDetailPartialView', function (template) {
                 $("#TextBoxesGroup").append(template);
                 event.preventDefault();
             });
         });
+
+        $("form").submit(function (e) {
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("AjaxEdit", "DiaryLogNew")',
+                data: $("form").serialize(),
+                success: function (result) {
+                    var date = result.split(",");
+                    if(date[0] === "true")
+                    {
+                        var url = '@Url.Action("Index")';
+                        url = url + "?userId="+@Model.UserId;
+                        window.location.href=url;
+                    }
+                    else
+                    {
+                    }
+                },
+                error: function (xhr, ajaxOptions, Error) {
+                    alert(Error);
+                }
+            });
+
+            e.preventDefault();
+        });
+
+        $("form").makeValidationInline();
+
+
+        
     });
 
     function deleteDetail(id) {
@@ -49,66 +77,68 @@
         }
     }
 
-
+    
 </script>
 
 <br />
 
-@using (Html.BeginForm("Edit", "DiaryLogNew", FormMethod.Post, new { @id = "editForm" }))
+@using (Html.BeginForm("AjaxEdit", "DiaryLogNew"))
 {
-    @Html.AntiForgeryToken()
-    <h4><strong>@ViewBag.Title</strong></h4>
-    <hr />
+        @Html.AntiForgeryToken()
+        <h4><strong>@ViewBag.Title</strong></h4>
+        <hr />
 
-    @Html.HiddenFor(m => m.DiaryLogDate)
-    <div class="form-horizontal">
-        <div class="form-group">
-            <label class="control-label col-md-2">員工編號</label>
-            <div class="col-md-2">
-                <label class="form-control">@Model.UserAccount</label>
+        @Html.HiddenFor(m => m.DiaryLogDate)
+        <div class="form-horizontal">
+            <div class="form-group">
+                <label class="control-label col-md-2">員工編號</label>
+                <div class="col-md-2">
+                    <label class="form-control">@Model.UserAccount</label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-md-2">姓名</label>
+                <div class="col-md-2">
+                    <label class="form-control">@Model.UserName</label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-md-2">時間</label>
+                <div class="col-md-2">
+                    <label class="form-control">@String.Format("{0:d}", Model.DiaryLogDate) </label>
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">姓名</label>
-            <div class="col-md-2">
-                <label class="form-control">@Model.UserName</label>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">時間</label>
-            <div class="col-md-2">
-                <label class="form-control">@String.Format("{0:d}",Model.DiaryLogDate) </label>
-            </div>
-        </div>
-    </div>
-
         <a id="addDetailBtn" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增</a>
         <br />
-            <table id='TextBoxesGroup' class="table table-striped" style="font-size:12px">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>項目</th>
-                        <th>內容</th>
-                        <th>狀態</th>
-                        <th>時數</th>
-                        <th>狀況</th>
-                        <th>是否解決</th>
-                    </tr>
-                </thead>
+        <br />
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>項目</th>
+                    <th>內容</th>
+                    <th>狀態</th>
+                    <th>時數</th>
+                    <th>狀況</th>
+                    <th>是否解決</th>
+                </tr>
+            </thead>
+            <tbody id='TextBoxesGroup'>
                 @foreach (var item in Model.DiaryLogs)
                 {
                     @Html.Partial("_DiaryLogEditDetailPartialView", item)
                 }
-            </table>
+            </tbody>
+        </table>
 
-            <div class="form-group">
-                <input type="submit" class="col-md-offset-11 btn btn-primary" onclick="ExecuteSubmit();" value="送出" />
-            </div>
+        <div class="form-group">
+            <input type="submit" class="col-md-offset-11 btn btn-primary" value="送出" />
+        </div>
+
 }
-
 <div>
     @Html.ActionLink("返回列表", "Index", new { userId = Model.UserId }, new { @class = "btn btn-default" })
 </div>
