--- a/DL/DL/Views/DiaryLogNew/_DiaryLogDetailPartialView.cshtml
+++ b/DL/DL/Views/DiaryLogNew/_DiaryLogDetailPartialView.cshtml
@@ -1,32 +1,46 @@
-﻿@model DL.Models.DiaryLog
+﻿@using DL.Web.ViewModels.DiaryLogNew
+@model DiaryLogDetailVM
+
+@if (this.ViewContext.FormContext == null)
+{
+    this.ViewContext.FormContext = new FormContext();
+}
+
 <tr>
     @using (Html.BeginCollectionItem("DiaryLogs"))
     {
         <td style="width:0">
-            @{System.Web.Mvc.MvcHtmlString UserId = @Html.IdFor(m => Model.UserId);}
+            @*@{System.Web.Mvc.MvcHtmlString UserId = @Html.IdFor(m => Model.UserId);}*@
         </td>
         <td>
-            @Html.TextBoxFor(m => m.DiaryLogItem, new { @class = "text-box single-line", @style = "width:120px" })
-            @Html.ValidationMessageFor(m => m.DiaryLogItem)
+            @Html.TextBoxFor(m => m.DiaryLogItem, new { @class = "text-box", @style = "width:120px" })
+            @Html.ValidationMessageFor(x => x.DiaryLogItem)
+            @*<input type="text" id="DiaryLogItem" name="DiaryLogItem" data-val="true" class="text-box" style = "width:120px"
+                   data-val-required="項目不可空白" />
+            <span data-valmsg-for="DiaryLogItem"></span>*@
         </td>
         <td>
-            @Html.TextBoxFor(m => m.DiaryLogContents, new { @class = "text-box single-line", @style = "width:180px" })
+            @Html.TextBoxFor(m => m.DiaryLogContents, new { @class = "text-box", @style = "width:180px" })
+            @Html.ValidationMessageFor(x => x.DiaryLogContents, "", new { @class = "text-danger" })
         </td>
         <td>
             @Html.CheckBoxFor(m => m.DiaryLogStatus, new { @class = "checkbox-inline", @style = "width:60px" }) 
+            @Html.ValidationMessageFor(x => x.DiaryLogStatus, "", new { @class = "text-danger" })
         </td>
         <td>
             @Html.TextBoxFor(m => m.DiaryLogHours, new { @class = "text-box single-line", @style = "width:40px", @type = "number" })
+            @Html.ValidationMessageFor(x => x.DiaryLogHours, "", new { @class = "text-danger" })
         </td>
         <td>
             @Html.TextBoxFor(m => m.DiaryLogSituation, new { @class = "text-box single-line", @style = "width:180px" })
+            @Html.ValidationMessageFor(x => x.DiaryLogSituation, "", new { @class = "text-danger" })
         </td>
         <td>
             @Html.TextBoxFor(m => m.DiaryLogSolve, new { @class = "text-box single-line", @style = "width:180px" })
+            @Html.ValidationMessageFor(x => x.DiaryLogSolve, "", new { @class = "text-danger" })
         </td>
         <td>
             <button class="btn btn-danger" onclick="$(this).parents('tr').remove(); event.preventDefault();">刪除</button>
         </td>
-
-                }
+}
 </tr>
