User Edit modify

--- a/DL/DL/Views/Account/RegistSuccess.cshtml
+++ b/DL/DL/Views/Account/RegistSuccess.cshtml
@@ -1,4 +1,4 @@
-﻿@model DL.Web.ViewModels.Account.RegisterViewModel
+﻿@model DL.Web.ViewModels.Account.RegisterVM
 
 @{
     ViewBag.Title = "註冊成功";
