--- a/DL/DL/Views/Shared/_Layout.cshtml
+++ b/DL/DL/Views/Shared/_Layout.cshtml
@@ -24,12 +24,13 @@
                 <ul class="nav navbar-nav">
                     @if (Session["Account"] != null && Session["Account"].ToString() != "9999")
                     {
-                        <li>@Html.ActionLink("工作日誌", "Index",new {userId = Session["Id"].ToString() }, "DiaryLogNew")</li>
+                        <li>@Html.ActionLink("工作日誌", "Index", "DiaryLogNew", new {userId = Session["Id"].ToString() },null)</li>
+                        <li>@Html.ActionLink("帳號修改", "Edit", "User", new { id = Session["Id"].ToString() }, null)</li>
                     }
-                    else if(Session["Account"] != null && Session["Account"].ToString() == "9999")
+                    else if (Session["Account"] != null && Session["Account"].ToString() == "9999")
                     {
-                        <li>@Html.ActionLink("會員管理", "Index", "User")</li>
                         <li>@Html.ActionLink("工作日誌", "MasterIndex", "DiaryLogNew")</li>
+                        <li>@Html.ActionLink("帳號管理", "Index", "User")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
