DiaryLog detail function

--- a/DL/DL/Views/DiaryLogNew/Detail.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Detail.cshtml
@@ -45,7 +45,7 @@
     </div>
 
     <br />
-        <table id='TextBoxesGroup' class="table table-striped" style="font-size:12px">
+        <table id='TextBoxesGroup' class="table table-striped" >
             <thead>
                 <tr>
                     <th></th>
