--- a/DL/DL/Views/Account/Register.cshtml
+++ b/DL/DL/Views/Account/Register.cshtml
@@ -14,12 +14,13 @@
 </script>
 
 <br />
+<label class="title">@ViewBag.Title</label>
+<hr />
 
 @using (Html.BeginForm("Register","Account",FormMethod.Post,new { @id="registerForm"}))
 {
     @Html.AntiForgeryToken()
-    <h4><strong>@ViewBag.Title</strong></h4>
-    <hr />
+
     <div class="form-horizontal">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
