--- a/DL/DL/Views/DiaryLogNew/Index.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Index.cshtml
@@ -34,7 +34,8 @@
         <label class="sr-only" for="inputfile">日期迄</label>
         @Html.TextBox("dateEnd", "", new { @placeholder = "請輸入日期迄", @class = "form-control" })
     </div>
-    <input type="submit" value="查詢" class="btn btn-default" />
+    <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>查詢</button>
+
     <br />
     <br />
 
@@ -76,10 +77,7 @@
                             {
                                 <a class="btn btn-primary" href="/DiaryLogNew/Edit/?strDate=@string.Format(" {0:yyyy-MM-dd}", item)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>編輯</a>
                             }
-                            else
-                            {
-                                <a class="btn btn-primary" href="/DiaryLogNew/Detail/?strDate=@string.Format(" {0:yyyy-MM-dd}", item)&userId=@Model.UserId"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>明細</a>
-                            }
+                            <a class="btn btn-primary" href="/DiaryLogNew/Detail/?strDate=@string.Format(" {0:yyyy-MM-dd}", item)&userId=@Model.UserId"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>明細</a>
                         </td>
                     </tr>
                 }
