--- a/DL/DL/Views/DiaryLogNew/MasterIndex.cshtml
+++ b/DL/DL/Views/DiaryLogNew/MasterIndex.cshtml
@@ -20,7 +20,8 @@
         <label class="sr-only" for="inputfile">姓名</label>
         @Html.TextBox("UserName", "", new { @placeholder = "請輸入姓名", @class = "form-control" })
     </div>
-    <input type="submit" value="查詢" class="btn btn-default" />
+    <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>查詢</button>
+
     <br />
     <br />
 
