--- a/DL/DL/Views/DiaryLogNew/_DiaryLogDetailPartialView.cshtml
+++ b/DL/DL/Views/DiaryLogNew/_DiaryLogDetailPartialView.cshtml
@@ -40,7 +40,7 @@
             @Html.ValidationMessageFor(x => x.DiaryLogSolve, "", new { @class = "text-danger" })
         </td>
         <td>
-            <button class="btn btn-danger" onclick="$(this).parents('tr').remove(); event.preventDefault();">刪除</button>
+            <button class="btn btn-danger" onclick="$(this).parents('tr').remove(); event.preventDefault();"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>刪除</button>
         </td>
 }
 </tr>
