--- a/DL/DL/Views/User/Index.cshtml
+++ b/DL/DL/Views/User/Index.cshtml
@@ -17,7 +17,8 @@
         <label class="sr-only" for="inputfile">員工編號</label>
         @Html.TextBox("UserAccount", "", new { @placeholder = "請輸入員工編號", @class = "form-control" })
     </div>
-    <input type="submit" value="查詢" class="btn btn-default" />
+    <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>查詢</button>
+
     <br />
     <br />
 
@@ -27,7 +28,7 @@
             <thead>
                 <tr>
                     <th>
-                        @Html.DisplayName("序號")  
+                        @Html.DisplayName("序號")
                     </th>
                     <th>
                         @Html.DisplayName("員工編號")
@@ -83,9 +84,10 @@
                         else
                         {
                             <td>
-                                @if (item.UserAccount != "9999") { 
-                                <a class="btn btn-primary" href="/User/Edit/@item.UserId"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>編輯</a>
-                                <a class="btn btn-danger" href="/User/Delete/@item.UserId"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>刪除</a>
+                                @if (item.UserAccount != "9999")
+                                {
+                                    <a class="btn btn-primary" href="/User/Edit/@item.UserId"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>編輯</a>
+                                    <a class="btn btn-danger" href="/User/Delete/@item.UserId"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>刪除</a>
                                 }
                             </td>
                         }
