delete some cshtml

--- a/DL/DL/Views/Account/Login.cshtml
+++ b/DL/DL/Views/Account/Login.cshtml
@@ -1,8 +1,7 @@
-﻿@using DL.Models
-@model LoginViewModel
+﻿@using DL.Web.ViewModels.Account
+@model LoginVM
 @{
     ViewBag.Title = "登入帳號";
-    ViewBag.SubTitle = "";
 }
 <br />
 
@@ -17,14 +16,15 @@
     });
 </script>
 
+<br />
+<label class="title">@ViewBag.Title</label>
+<hr />
 
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new {@id="form", @class = "form-horizontal", role = "form" }))
             {
-                <h4><strong>@ViewBag.Title</strong> </h4>
-                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
                     @Html.LabelFor(m => m.AccountId, new { @class = "col-md-2 control-label" })
