--- a/DL/DL/Views/DiaryLogNew/Create.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Create.cshtml
@@ -2,7 +2,7 @@
 @model DiaryLogNewCreateVM
 
 @{
-    ViewBag.Title = "[工作日誌/新增]";
+    ViewBag.Title = "[日誌/新增]";
 }
 
 <script type="text/javascript">
