--- a/DL/DL/Views/DiaryLogNew/Edit.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Edit.cshtml
@@ -2,7 +2,7 @@
 @model DiaryLogNewEditVM
 
 @{
-    ViewBag.Title = "[工作日誌/編輯]";
+    ViewBag.Title = "[日誌/編輯]";
 }
 
 <script type="text/javascript">
