--- a/DL/DL/Views/DiaryLogNew/Index.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Index.cshtml
@@ -2,7 +2,7 @@
 @model DiaryLogNewIndexVM
 
 @{
-    ViewBag.Title = "[工作日誌/查詢]";
+    ViewBag.Title = "[日誌/查詢]";
     ViewBag.SubTitle = "輸入查詢條件";
 }
 
@@ -77,7 +77,7 @@
                             {
                                 <a class="btn btn-primary" href="/DiaryLogNew/Edit/?strDate=@string.Format(" {0:yyyy-MM-dd}", item)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>編輯</a>
                             }
-                            <a class="btn btn-primary" href="/DiaryLogNew/Detail/?strDate=@string.Format(" {0:yyyy-MM-dd}", item)&userId=@Model.UserId"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>明細</a>
+                            <a class="btn btn-info" href="/DiaryLogNew/Detail/?strDate=@string.Format(" {0:yyyy-MM-dd}", item)&userId=@Model.UserId"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>明細</a>
                         </td>
                     </tr>
                 }
