--- a/DL/DL/Views/DiaryLogNew/_DiaryLogEditDetailPartialView.cshtml
+++ b/DL/DL/Views/DiaryLogNew/_DiaryLogEditDetailPartialView.cshtml
@@ -12,43 +12,23 @@
             @Html.TextBoxFor(m => m.DiaryLogItem, new { @class = "text-box single-line", @style = "width:120px" })
         </td>
         <td>
-            @Html.TextBoxFor(m => m.DiaryLogContents, new { @class = "text-box single-line", @style = "width:180px" })
+            @Html.TextAreaFor(m => m.DiaryLogContents, new { @class = "text-box", @style = "width:280px;height=106px" })
         </td>
         <td>
             @Html.CheckBoxFor(m => m.DiaryLogStatus, new { @class = "checkbox-inline", @style = "width:60px" })
         </td>
         <td>
-            @Html.TextBoxFor(m => m.DiaryLogHours, new { @class = "text-box single-line", @style = "width:40px", @type = "number" })
+            @Html.TextBoxFor(m => m.DiaryLogHours, new { @class = "text-box single-line", @style = "width:70px", @type = "number" })
         </td>
         <td>
-            @Html.TextBoxFor(m => m.DiaryLogSituation, new { @class = "text-box single-line", @style = "width:180px" })
+            @Html.TextAreaFor(m => m.DiaryLogSituation, new { @class = "text-box", @style = "width:280px;height=106px" })
         </td>
         <td>
-            @Html.TextBoxFor(m => m.DiaryLogSolve, new { @class = "text-box single-line", @style = "width:180px" })
+            @Html.TextAreaFor(m => m.DiaryLogSolve, new { @class = "text-box", @style = "width:280px;height=106px" })
         </td>
         <td>
             <button class="btn btn-danger" onclick="deleteDetail('@actdetailNo')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>刪除</button>
         </td>
                 }
 </tr>
-@functions{
-    public string ConvertDate(DateTime? date)
-    {
-        string r = "";
-        if (date.HasValue)
-        {
-            r = date.Value.ToString("yyyy/MM/dd");
-        }
-        return r;
-    }
 
-    public string ConvertTime(DateTime? date)
-    {
-        string r = "";
-        if (date.HasValue)
-        {
-            r = date.Value.ToString("HH:mm");
-        }
-        return r;
-    }
-}
